--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "update-webdriver-manager": "node .//node_modules//protractor//node_modules//webdriver-manager//bin//webdriver-manager update",
     "test-angular": "node E://protractor-getting-started//node_modules//protractor//bin//protractor E://protractor-getting-started//node_modules//protractor//example//conf.js",
-    "start": "node E://protractor-getting-started//node_modules//protractor//bin//protractor conf//login-conf.js",
+    "start": "node E://protractor-getting-started//node_modules//protractor//bin//protractor conf//bMoore-conf.js",
     "protractor-version": "node E://protractor-getting-started//node_modules//protractor//bin//protractor --version",
     "webdriver-manager-version": "node .//node_modules//protractor//node_modules//webdriver-manager//bin//webdriver-manager version",
     "allure":"node E://protractor-getting-started//node_modules//allure-commandline//bin//allure",
